--- a/Clinic System.csproj
+++ b/Clinic System.csproj
@@ -109,6 +109,18 @@
     <Compile Include="MainMenuForm.Designer.cs">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Payment\AddNewBillForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Payment\AddNewBillForm.Designer.cs">
+      <DependentUpon>AddNewBillForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Payment\PaymentOperationsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Payment\PaymentOperationsForm.Designer.cs">
+      <DependentUpon>PaymentOperationsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ucMedicalRecordInfo.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -170,6 +182,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainMenuForm.resx">
       <DependentUpon>MainMenuForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payment\AddNewBillForm.resx">
+      <DependentUpon>AddNewBillForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Payment\PaymentOperationsForm.resx">
+      <DependentUpon>PaymentOperationsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucMedicalRecordInfo.resx">
       <DependentUpon>ucMedicalRecordInfo.cs</DependentUpon>
